# ckb-debugger-dumper

./: .gitmodules  Cargo.toml  Makefile  README.md  test_multi.json  test_sign.json
c/: Makefile  always_failed.c  build_ckb-debugger.sh  ckb-debugger.patch  dump.c  output.h
src/: lib.rs
tests/: misc.rs  test_gen_json.rs
