[package]
name = "ckb-debugger-dumper"
version = "0.101.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-script = "0.101.3"
ckb-types = "0.101.3"
ckb-traits = "0.101.3"
json = "0.12.4"
molecule = "0.7.1"

[dev-dependencies]
ckb-vm = "=0.20.1"
ckb-chain-spec = "=0.101.3"
lazy_static = "1.3.0"
rand = "0.6.5"
