[workspace]
members = []

[package]
name = "ckb-debugger-dumper"
version = "0.108.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-mock-tx-types = "0.113.0"
ckb-script = "0.113.0"
ckb-types = "0.113.0"
ckb-traits = "0.113.0"

serde_json = "1.0.113"

json = "0.12.4"
molecule = "0.7.3"

[dev-dependencies]
ckb-chain-spec = "0.113.0"
lazy_static = "1.3.0"
rand = "0.6.5"
